--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@ nav {
 }
 
 .dame-blazer-grå {
-    background-image: url('../img/dame-blazer-grå.png');
+    background-image: url('../img/dame-blazer-gra.png');
 }
 
 .dame-blazer-sort {
@@ -633,7 +633,7 @@ nav {
 }
 
 .herre-blazer-grå {
-    background-image: url('../img/herre-blazer-grå.png');
+    background-image: url('../img/herre-blazer-gra.png');
 }
 
 .herre-blazer-sort {
@@ -751,7 +751,7 @@ nav {
 }
 
 .lille-dame-blazer-grå {
-    background-image: url('../img/dame-blazer-grå.png');
+    background-image: url('../img/dame-blazer-gra.png');
 }
 
 .lille-dame-blazer-sort {
@@ -771,7 +771,7 @@ nav {
 }
 
 .lille-dame-buks-grå {
-    background-image: url('../img/dame-buks-grå.png');
+    background-image: url('../img/dame-buks-gra.png');
 }
 
 .lille-dame-buks-sort {
@@ -787,7 +787,7 @@ nav {
 }
 
 .lille-dame-skjorte-blå {
-    background-image: url('../img/dame-skjorte-blå.png');
+    background-image: url('../img/dame-skjorte-bla.png');
 }
 
 .lille-dame-skjorte-hvid {
